syntax = "proto3";

option go_package = "github.com/mapout-world/stern/services/service.users/proto/v1;userspb";

package service.users.v1;

service Users {
  rpc GetUser (GetUserRequest) returns (GetUserReply) {}
}

message GetUserRequest {
  string id = 1;
}

message GetUserReply {
  string username = 1;
  string email = 2;
}